--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "bilibox",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
+    "@craco/craco": "^7.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,17 +12,24 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "bilibili-live-ws": "^6.0.3",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "electron .",
+    "serve": "serve -s build",
+    "electron": "wait-on tcp:3000 && electron .",
+    "dev": "NODE_ENV=development concurrently -k \"BROWSER=none craco start\" \"npm:electron\"",
+    "build": "PUBLIC_URL=. craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "electron": "^17.0.0",
+    "serve": "^13.0.2",
+    "wait-on": "^6.0.1"
   }
 }
